# anomaly-detector

./: .env.example  .gitignore  README.md  TASK.md  docker-compose.yml
detector/: Dockerfile  __main__.py  baseline.py  blocker.py  config.yaml  dashboard.py  detector.py  main.py  monitor.py  notifier.py  pyproject.toml  requirements.txt  unbanner.py
nginx/: nginx.conf
