[project]
name = "anomaly-detector"
version = "0.1.0"
description = "Real-time HTTP anomaly detection and DDoS mitigation engine for Nextcloud"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "pyyaml>=6.0.2",
    "psutil>=6.1.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
